# tm-mcp-server-v2

./: .cfignore  .env.example  .gitignore  CLAUDE.md  MCP_GUIDE.md  README.md  audit.py  config.py  deploy.sh  manifest.yml  pyproject.toml  requirements.txt  server.py
docs/: ARCHITECTURE.md  MCP_GUIDE.md  README.md  SOLUTION_ALTERNATIVES.md  business-questions.md  dependency-graph.md
docs/diagrams/: current-architecture.md  datasphere-joule.md  hana-cap-mcp.md  hybrid-datasphere-mcp.md  integration-suite-aicore.md  successfactors-extension.md
resources/: business_questions.md  tm_schema.sql
